@@ -2,6 +2,8 @@
 Version: 2.0.4
 Date: ????
   Changes:
+  Bugfixes:
+    - Fixed that the iron plate to iron rod recipe referred to a deprecated `angels-rod-iron` icon instead of the current `iron-stick` icon
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.3
 Date: 2021-12-12
